--- a/parkingapp/templates/dash_fin.html
+++ b/parkingapp/templates/dash_fin.html
@@ -1,110 +1,86 @@
 {% extends 'dash_base.html' %}
-{% block actfin %}active{% endblock %}
+{% block actfull %}active{% endblock %}
 {% block content %}
-<div class="d-flex flex-column" id="content-wrapper">
-    <div id="content">
-        <div class="container-fluid mt-3">
-            <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                <h3 class="text-dark mb-0">Финансовый отчет</h3>
-                <form method="POST">
-                    {% csrf_token %}
-                    <div class="input-group" style="max-width: 500px;">
-                        {{form.date1}}
-                        {{form.date2}}
-                        <button type="submit" class="btn btn-sm btn-primary radr">Получить данные</button>
-                    </div>
-                </form>
-            </div>
-            <div class="row">
-                <div class="col-auto col-md-6 col-xl-3 mb-4">
-                    <div class="card shadow border-start-primary py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Транзакций на сумму</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>{{Fin.total_price}}</span></div>
-                                </div>
-                                <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-auto col-md-6 col-xl-3 mb-4">
-                    <div class="card shadow border-start-success py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество транзакций</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>{{Fin.how_much_people_used}}</span></div>
-                                </div>
-                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-auto col-md-6 col-xl-3 mb-4">
-                    <div class="card shadow border-start-success py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Льготных транзакций на сумму</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>{{Fin.benefits_price}}</span></div>
-                                </div>
-                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-auto col-md-6 col-xl-3 mb-4">
-                    <div class="card shadow border-start-success py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span>Количество льготных транзакций</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>{{Fin.with_benefits}}</span></div>
-                                </div>
-                                <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="card shadow p-0">
-                    <div class="card-header py-3">
-                        <p class="text-primary m-0 fw-bold">Общий отчет</p>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                        <div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
-                            <table class="table my-0" id="dataTable">
-                                <thead>
-                                    <tr>
-                                        <th>Парковка</th>
-                                        <th>Транзакций на сумму</th>
-                                        <th>Кол-во транзакций</th>
-                                        <th>Льготных транзакций на сумму</th>
-                                        <th>Кол-во льготных транзакций</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for el in parkings %}
-                                    <tr>
-                                        <td>{{el.address}}</td>
-                                        <td>{{el.total_sum}}</td>
-                                        <td>{{el.how_much_people_used}}</td>
-                                        <td>{{el.benefit_sum}}<br></td>
-                                        <td>{{el.with_benefits}}</td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Отчет по системе</h1>
+    <div class="mb-2 mb-md-0">
+      <form method="POST">
+        {% csrf_token %}
+        <div class="input-group me-2">
+          {{form.date1}}
+          {{form.date2}}
+          <button type="submit" class="btn btm-sm btn-primary radr"><i class="bi bi-arrow-return-left"></i></button>
+        </div>
+      </form>
     </div>
-</div>
+  </div>
+
+  <div class="row g-3">
+    <div class="col-sm-6 col-xxl-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title fw-bolder">{{Fin.total_price}} ₽</h5>
+          <p class="card-text">Транзакций на сумму</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-xxl-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title fw-bolder">{{Fin.how_much_people_used}}</h5>
+          <p class="card-text">Количество транзакций</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-xxl-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title fw-bolder">{{Fin.benefits_price}} ₽</h5>
+          <p class="card-text">Льготных транзакций на сумму</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-xxl-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title fw-bolder">{{Fin.with_benefits}}</h5>
+          <p class="card-text">Количество льготных транзакций</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Сводный отчет</h1>
+  </div>
+
+  <div class="table-responsive small">
+    <table class="table table-striped table-sm">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Улица</th>
+          <th scope="col">Тр-ций на сумму</th>
+          <th scope="col">Кол-во транзакций</th>
+          <th scope="col">Льготных тр-ций на сумму</th>
+          <th scope="col">Кол-во льготных транзакций</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for el in parkings %}
+        <tr>
+          <td>1</td>
+          <td>{{el.address}}</td>
+          <td>{{el.total_sum}}</td>
+          <td>{{el.how_much_people_used}}<br></td>
+          <td>{{el.benefit_sum}}</td>
+          <td>{{el.with_benefits}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</main>
 {% endblock %}
