они любит формы, форматы

--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -60,7 +60,7 @@
     {% csrf_token %}
     <div class="input-group shadow rounded-4">
       <div class="form-floating">
-        {{ form.pk }}
+        {{ form.parking_id }}
         <label for="floatingInput">ID парковки</label>
       </div>
       <button name="create_park" class="btn btn-lg group-second btn-primary" type="submit">Заехать</button>
