--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -156,7 +156,7 @@
       crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="dash.js"></script>
+    <!--<script src="dash.js"></script>-->
   </header>
 
   <div class="container-fluid">
@@ -172,13 +172,13 @@
           <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="#">
+                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="{% url 'parkingapp:dash_full' %}">
                   <i class="bi bi-car-front-fill"></i>
                   Наполняемость
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:dash_fin' %}">
                   <i class="bi bi-piggy-bank-fill"></i>
                   Финансовый отчет
                 </a>
@@ -196,13 +196,13 @@
               </h6>
               <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:dash_users' %}">
                     <i class="bi bi-people-fill"></i>
                     Пользователи
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:dash_parks' %}">
                     <i class="bi bi-p-circle-fill"></i>
                     Парковки
                   </a>
