--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -208,7 +208,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:dash_reciepts' %}">
                     <i class="bi bi-receipt-cutoff"></i>
                     Чеки
                   </a>
