--- a/parkingapp/templates/enter.html
+++ b/parkingapp/templates/enter.html
@@ -20,7 +20,7 @@
               <label for="{{ form.password.id_for_label }}">Пароль</label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Войти</button>
-            <small>{{ form.errors }}</small>
+            <small class="text-danger">{{ error }}</small>
           </form>
         </div>
       </div>
