--- a/parkingapp/templates/dash_full.html
+++ b/parkingapp/templates/dash_full.html
@@ -1,5 +1,6 @@
 {% extends 'dash_base.html' %}
 {% block content %}
+
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Наполняемость</h1>
@@ -10,7 +11,7 @@
           {{form.pk}}
           {{form.date1}}
           {{form.date2}}
-          <button type="submit" class="btn btm-sm btn-primary radr" name=""><i class="bi bi-arrow-return-left"></i></button>
+          <button type="submit" class="btn btm-sm btn-primary radr"><i class="bi bi-arrow-return-left"></i></button>
         </div>
       </div>
     </form>
