--- a/parkingapp/templates/signadmin.html
+++ b/parkingapp/templates/signadmin.html
@@ -26,27 +26,33 @@
             <hr class="m-0 mb-2">
             <small class="text-secondary">Установите права для пользователя</small>
             <div class="form-check my-3">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+              {{ form.user_control }}
               <label class="form-check-label" for="flexCheckChecked">
                 Управление пользователями
               </label>
             </div>
             <div class="form-check my-3">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+              {{ form.parking_control }}
               <label class="form-check-label" for="flexCheckChecked">
                 Управление парковками
               </label>
             </div>
             <div class="form-check my-3">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+              {{ form.barrier_control }}
               <label class="form-check-label" for="flexCheckChecked">
                 Управление шлагбаумами
               </label>
             </div>
-            <div class="form-check my-3 mb-4">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+            <div class="form-check my-3">
+              {{ form.coupon_control }}
               <label class="form-check-label" for="flexCheckChecked">
                 Обнуление чеков
+              </label>
+            </div>
+            <div class="form-check my-3 mb-4">
+              {{ form.admin_view }}
+              <label class="form-check-label" for="flexCheckChecked">
+                Просмотр панели администратора
               </label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Зарегистрироваться</button>
