меняйте цену как скуфы меняют альтушек

--- a/parkingapp/templates/dash_parks.html
+++ b/parkingapp/templates/dash_parks.html
@@ -70,7 +70,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                    <button class="btn btn-primary" type="submit">Изменить цену</button>
+                    <button class="btn btn-primary" type="submit" name="change_price" value="{{el.pk}}">Изменить цену</button>
                   </div>
                 </div>
               </div>
