--- a/parkingapp/templates/dash_users.html
+++ b/parkingapp/templates/dash_users.html
@@ -3,8 +3,7 @@
 {% block content %}
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
-  <div
-    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Пользователи</h1>
   </div>
 
@@ -12,6 +11,7 @@
     <table class="table table-striped table-sm">
       <thead>
         <tr>
+          <th scope="col">ID</th>
           <th scope="col">Имя пользователя</th>
           <th scope="col">Управление пользователями</th>
           <th scope="col">Управление парковками</th>
@@ -21,39 +21,58 @@
           <th scope="col">Действие</th>
         </tr>
       </thead>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Подтвердите удаление</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post">
+              {%csrf_token%}
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                <button class="btn btn-primary" id="submit" name="delete" type="submit">Удалить</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
       <tbody class="align-middle">
         {% for el in users %}
         <tr>
-            <td>{{ el.username }}</td>
-            <td class="{% if el.user_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">{{ el.user_control }}</td>
-            <td class="{% if el.parking_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">{{ el.parking_control }}</td>
-            <td class="{% if el.barrier_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">{{ el.barrier_control }}</td>
-            <td class="{% if el.coupon_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">{{ el.coupon_control }}</td>
-            <td class="{% if el.coupon_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">{{ el.admin_view }}</td>
-            <form method="post">
-            {%csrf_token%}
-            <td><button class="text-danger" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" style="border: none; background: none;">Удалить</button></td>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-              aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Подтвердите удаление</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                    <button class="btn btn-primary" value="{{el.pk}}" name="delete" type="submit">Удалить</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </form>
+          <td>{{ el.pk }}</td>
+          <td>{{ el.username }}</td>
+          <td class="{% if el.user_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">
+            {{ el.user_control }}</td>
+          <td class="{% if el.parking_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">
+            {{ el.parking_control }}</td>
+          <td class="{% if el.barrier_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">
+            {{ el.barrier_control }}</td>
+          <td class="{% if el.coupon_control %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">
+            {{ el.coupon_control }}</td>
+          <td class="{% if el.admin_view %} bg-success-subtle {% else %} bg-danger-subtle {% endif %}">
+            {{ el.admin_view }}</td>
+          <td><button class="text-danger" type="button" data-bs-whatever="{{el.pk}}" data-bs-toggle="modal"
+              data-bs-target="#exampleModal" style="border: none; background: none;">Удалить</button></td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
-
 </main>
+<script>
+  const exampleModal = document.getElementById('exampleModal')
+  if (exampleModal) {
+    exampleModal.addEventListener('show.bs.modal', event => {
+      const button = event.relatedTarget
+      const recipient = button.getAttribute('data-bs-whatever')
+      const modalTitle = exampleModal.querySelector('.modal-title')
+
+      document.getElementById('submit').setAttribute('value', recipient)
+
+      modalTitle.textContent = `Подтвердите удаление (ID ${recipient})`
+    })
+  }
+</script>
 {% endblock %}
