--- a/parkingapp/templates/dont_have_access.html
+++ b/parkingapp/templates/dont_have_access.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="container text-center">
+<div class="container text-center mt-5">
     <h1 class="display-6 text-body-emphasis">У вас нет доступа к этой странице</h1>
     <a class="mt-2" href="{% url 'parkingapp:index' %}">На главную</a>
 </div>
